[project]
name = "jovi_preset"
description = "Presets for ComfyUI Nodes with user persistance"
version = "1.0.1"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Preset"
Documentation = "https://github.com/Amorano/Jovi_Preset/wiki"
Repository = "https://github.com/Amorano/Jovi_Preset"
Issues = "https://github.com/Amorano/Jovi_Preset/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Preset"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_preset.png"
